after much toiling, have a rudimentary css fix without using position absolute that allows for svg to be scrolled at the same pace as the hourly divs.  key was to use overflow-x:overlay on an outer parent i wasn't touching before.  made extended forecast graph go away though, need to fix

--- a/client/src/components/extendedForecast.css
+++ b/client/src/components/extendedForecast.css
@@ -58,26 +58,52 @@
     font-weight: 300;
     font-size: 15px;
 }
-#svg {
+
+/* #svg {
     position: absolute;
     left: 0px;
-    width: 100%;
-    height: 100%;
     z-index: -2;
+    overflow-x: scroll;
+} */
+
+#test {
+    overflow-x: overlay;
+}
+
+#svg {
+    position: relative;
+    left: 0px;
+    z-index: -2;
+    /* left: -6500px; */
+    height: 100%;
+    width: 100%;
+
+    /* overflow-x: scroll;
 }
 
 line {
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
 }
+
+/* .forecastDayHourly {
+    border-right: 1px solid white;
+    height: 38rem;
+    width: 24rem;
+    display:inline-block;
+    margin-bottom: 20px;
+} */
 
 .forecastDayHourly {
     border-right: 1px solid white;
     /* border-radius: 2px; */
-    /* margin-left: 5px;
-    margin-right: 5px; */
     height: 38rem;
+    position: relative;
     width: 24rem;
-    display:inline-block;
+    display: block;
+    /* right: 6500px; */
+    /* transform: translate(-6500px, 0px); */
+    bottom: 640px;
+    float: left;
     margin-bottom: 20px;
 }
 
@@ -89,11 +115,24 @@ line {
     height: 38rem;
 }
 
-#forecastResults {
-    /* courtesy of https://codeburst.io/how-to-create-horizontal-scrolling-containers-d8069651e9c6 */
+/* courtesy of https://codeburst.io/how-to-create-horizontal-scrolling-containers-d8069651e9c6 */
+/* #forecastResults {
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
+    user-select: none;
+} */
+
+#forecastResults {
+    overflow-x: scroll;
+    /* width: 8000px; */
+    width: 7200px;
+    /* position: absolute; */
+    overflow-y: hidden;
+    /* right: 500px; */
+    height: 45rem;
+    white-space: nowrap;
+    -webkit-user-select: none;
     user-select: none;
 }
 
